# flowweave

./: .gitattributes  .gitignore  ABOUT.md  BENCHMARK.md  B_INGRESS_RESEARCH.md  CAPACITY_PROBE_RESEARCH.md  C_RESEARCH.md  Cargo.toml  FAILOVER_RESEARCH.md  FREEZE.md  HYSTERIA_RESEARCH.md  MATH_RESEARCH.md  MPTCP_COMPARISON.md  MPTCP_RESULTS.md  PROJECT.md  PROXY_RESEARCH.md  PROXY_ROTATION.md  PROXY_SOAK.md  README.md  SCHEDULER_RESEARCH.md  VPN_IDENTITY.md  VPN_RESEARCH.md
benchmark-results/: 2026-07-11-ack-ecf-screening.csv  2026-07-11-capacity-probe-screening.csv  2026-07-11-delivery-rate-weighted-screening.csv  2026-07-11-scheduler-long-survivors.csv  2026-07-11-scheduler-long.csv  2026-07-11-scheduler-screening.csv  2026-07-12-abandon-reinjection-diagnostic.csv  2026-07-12-ack-credit-v1-heterogeneous-smoke-2.csv  2026-07-12-ack-escape-representative-diagnostic.csv  2026-07-12-ack-progress-reinjection-diagnostic.csv  2026-07-12-ack-progress-service-timeline-diagnostic.csv  2026-07-12-alternative-stability-v6-8-formal-20-summary.csv  2026-07-12-alternative-stability-v6-8-formal-failures-4-summary.csv  2026-07-12-alternative-stability-v6-8-reverse-8-summary.csv  2026-07-12-alternative-stability-v6-8-reverse-8-timeline.csv  2026-07-12-alternative-stability-v6-8-smoke-3-summary.csv  2026-07-12-alternative-stability-v6-8-stability-10-summary.csv  2026-07-12-application-progress-1104-stability-v6-summary.csv  2026-07-12-application-progress-age-v6-1-smoke-3-summary.csv  2026-07-12-application-progress-deadline-v6-2-smoke-3-summary.csv  2026-07-12-application-progress-deadline-v6-2-stability-10-summary.csv  2026-07-12-application-progress-formal-failures-v6-summary.csv  2026-07-12-application-progress-version-v6-3-formal-failures-4-summary.csv  2026-07-12-application-progress-version-v6-3-smoke-3-summary.csv  2026-07-12-application-progress-version-v6-3-stability-10-summary.csv  2026-07-12-bbr-capacity-screening.csv  2026-07-12-cross-path-ack-escape-diagnostic.csv  2026-07-12-delivery-gap-watch-v6-7-formal-failures-4-summary.csv  2026-07-12-delivery-gap-watch-v6-7-reverse-8-summary.csv  2026-07-12-delivery-gap-watch-v6-7-reverse-8-timeline.csv  2026-07-12-delivery-gap-watch-v6-7-smoke-3-summary.csv  2026-07-12-delivery-gap-watch-v6-7-smoke-3-timeline.csv  2026-07-12-feedback-evidence-1104-response-v2-summary.csv  2026-07-12-feedback-evidence-1104-stability-summary.csv  2026-07-12-feedback-gap-rescue-1104-response-v3-summary.csv  2026-07-12-feedback-gap-watch-1104-response-v4-summary.csv  2026-07-12-feedback-gap-watch-formal-v5-summary.csv  (+78 more)
deploy/: README.md  (+9 more)
fuzz/: Cargo.toml  README.md  vpn_reassembly.dict
fuzz/fuzz_targets/: vpn_reassembly.rs
(+73 files in other folders)
